ffi/include/int2dds-ffi.h

/**
 * Opaque handle to a DataReader
 */
typedef struct Int2DdsDataReader Int2DdsDataReader;
/**
 * Opaque handle to a DataWriter
 */
typedef struct Int2DdsDataWriter Int2DdsDataWriter;
/**
 * Opaque handle to a DomainParticipant
 */
typedef struct Int2DdsParticipant Int2DdsParticipant;
typedef struct Int2DdsParticipantBuiltinTopicData Int2DdsParticipantBuiltinTopicData;
typedef struct Int2DdsPublicationBuiltinTopicData Int2DdsPublicationBuiltinTopicData;
typedef struct Int2DdsSubscriptionBuiltinTopicData Int2DdsSubscriptionBuiltinTopicData;
/**
 * FFI return codes
 */
typedef int32_t Int2DdsRet;
/**
 * Get discovered participant instance handles.
 *
 * Writes up to `capacity` handles into `handles_out`.
 * `count_out` receives the total number of discovered participants
 * (may be greater than `capacity`).
 */
Int2DdsRet int2dds_participant_get_discovered_participants(const struct Int2DdsParticipant *participant,
                                                           uint8_t (*handles_out)[16],
                                                           uintptr_t capacity,
                                                           uintptr_t *count_out);
/**
 * Get matched subscription instance handles for a DataWriter.
 */
Int2DdsRet int2dds_datawriter_get_matched_subscriptions(const struct Int2DdsDataWriter *writer,
                                                        uint8_t (*handles_out)[16],
                                                        uintptr_t capacity,
                                                        uintptr_t *count_out);
/**
 * Get matched publication instance handles for a DataReader.
 */
Int2DdsRet int2dds_datareader_get_matched_publications(const struct Int2DdsDataReader *reader,
                                                       uint8_t (*handles_out)[16],
                                                       uintptr_t capacity,
                                                       uintptr_t *count_out);
/**
 * Get discovered participant data for a given handle.
 * On success, `*data_out` receives a heap-allocated opaque pointer.
 * The caller must free it with `int2dds_participant_builtin_topic_data_destroy`.
 */
Int2DdsRet int2dds_participant_get_discovered_participant_data(const struct Int2DdsParticipant *participant,
                                                               const uint8_t (*handle)[16],
                                                               struct Int2DdsParticipantBuiltinTopicData **data_out);
/**
 * Get matched subscription data for a given handle.
 * On success, `*data_out` receives a heap-allocated opaque pointer.
 * The caller must free it with `int2dds_subscription_builtin_topic_data_destroy`.
 */
Int2DdsRet int2dds_datawriter_get_matched_subscription_data(const struct Int2DdsDataWriter *writer,
                                                            const uint8_t (*handle)[16],
                                                            struct Int2DdsSubscriptionBuiltinTopicData **data_out);
/**
 * Get matched publication data for a given handle.
 * On success, `*data_out` receives a heap-allocated opaque pointer.
 * The caller must free it with `int2dds_publication_builtin_topic_data_destroy`.
 */
Int2DdsRet int2dds_datareader_get_matched_publication_data(const struct Int2DdsDataReader *reader,
                                                           const uint8_t (*handle)[16],
                                                           struct Int2DdsPublicationBuiltinTopicData **data_out);
/**
 * Get the key from a ParticipantBuiltinTopicData.
 * `key_out` must point to a 12-byte buffer.
 */
Int2DdsRet int2dds_participant_builtin_topic_data_get_key(const struct Int2DdsParticipantBuiltinTopicData *data,
                                                          uint8_t (*key_out)[12]);
/**
 * Get the user_data from a ParticipantBuiltinTopicData.
 * Copies up to `capacity` bytes into `buf`. `size_out` receives the actual size.
 */
Int2DdsRet int2dds_participant_builtin_topic_data_get_user_data(const struct Int2DdsParticipantBuiltinTopicData *data,
                                                                uint8_t *buf,
                                                                uintptr_t capacity,
                                                                uintptr_t *size_out);
/**
 * Free a ParticipantBuiltinTopicData obtained from discovery.
 */
Int2DdsRet int2dds_participant_builtin_topic_data_destroy(struct Int2DdsParticipantBuiltinTopicData *data);
/**
 * Get the key from a PublicationBuiltinTopicData.
 * `key_out` must point to a 12-byte buffer.
 */
Int2DdsRet int2dds_publication_builtin_topic_data_get_key(const struct Int2DdsPublicationBuiltinTopicData *data,
                                                          uint8_t (*key_out)[12]);
/**
 * Get the participant key from a PublicationBuiltinTopicData.
 * `key_out` must point to a 12-byte buffer.
 */
Int2DdsRet int2dds_publication_builtin_topic_data_get_participant_key(const struct Int2DdsPublicationBuiltinTopicData *data,
                                                                      uint8_t (*key_out)[12]);
/**
 * Get the topic name from a PublicationBuiltinTopicData.
 * Copies a null-terminated UTF-8 string into `buf`.
 * `size_out` receives the required size (including null terminator).
 */
Int2DdsRet int2dds_publication_builtin_topic_data_get_topic_name(const struct Int2DdsPublicationBuiltinTopicData *data,
                                                                 uint8_t *buf,
                                                                 uintptr_t capacity,
                                                                 uintptr_t *size_out);
/**
 * Get the type name from a PublicationBuiltinTopicData.
 * Copies a null-terminated UTF-8 string into `buf`.
 * `size_out` receives the required size (including null terminator).
 */
Int2DdsRet int2dds_publication_builtin_topic_data_get_type_name(const struct Int2DdsPublicationBuiltinTopicData *data,
                                                                uint8_t *buf,
                                                                uintptr_t capacity,
                                                                uintptr_t *size_out);
/**
 * Free a PublicationBuiltinTopicData obtained from discovery.
 */
Int2DdsRet int2dds_publication_builtin_topic_data_destroy(struct Int2DdsPublicationBuiltinTopicData *data);
/**
 * Get the key from a SubscriptionBuiltinTopicData.
 * `key_out` must point to a 12-byte buffer.
 */
Int2DdsRet int2dds_subscription_builtin_topic_data_get_key(const struct Int2DdsSubscriptionBuiltinTopicData *data,
                                                           uint8_t (*key_out)[12]);
/**
 * Get the participant key from a SubscriptionBuiltinTopicData.
 * `key_out` must point to a 12-byte buffer.
 */
Int2DdsRet int2dds_subscription_builtin_topic_data_get_participant_key(const struct Int2DdsSubscriptionBuiltinTopicData *data,
                                                                       uint8_t (*key_out)[12]);
/**
 * Get the topic name from a SubscriptionBuiltinTopicData.
 * Copies a null-terminated UTF-8 string into `buf`.
 * `size_out` receives the required size (including null terminator).
 */
Int2DdsRet int2dds_subscription_builtin_topic_data_get_topic_name(const struct Int2DdsSubscriptionBuiltinTopicData *data,
                                                                  uint8_t *buf,
                                                                  uintptr_t capacity,
                                                                  uintptr_t *size_out);
/**
 * Get the type name from a SubscriptionBuiltinTopicData.
 * Copies a null-terminated UTF-8 string into `buf`.
 * `size_out` receives the required size (including null terminator).
 */
Int2DdsRet int2dds_subscription_builtin_topic_data_get_type_name(const struct Int2DdsSubscriptionBuiltinTopicData *data,
                                                                 uint8_t *buf,
                                                                 uintptr_t capacity,
                                                                 uintptr_t *size_out);
/**
 * Free a SubscriptionBuiltinTopicData obtained from discovery.
 */
Int2DdsRet int2dds_subscription_builtin_topic_data_destroy(struct Int2DdsSubscriptionBuiltinTopicData *data);